Fix : 가독성을 위한 코드 리팩토링
- 불필요한 공백 제거
- List 를 여러개 넣기위해 Arrays.asList 사용
- 함수에서 함수로 반환할때는 ~Response 가 아니라 ~ResponseDto 를 쓴다
- 함수에서 함수로 반환하지 않고, JSON 에서 리스트로 나누기 위해 쓰기때문에  ~ResponseDto 가 아니라 ~Item 으로 쓴다